@@ -1,3 +1,7 @@
+Tue Jun  8 06:04:49 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* io.c (parse_mode_enc): set set_by_bom bit.  [ruby-core:30641]
+
 Sun Jun  6 23:35:12 2010  Masaya Tarui  <tarui@ruby-lnag.org>
 
 	* gc.c (heaps_slot, assign_heap_slot, gc_sweep): skip sweep if
